k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmutnb-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kmutnb
  ports:
    - port: 80
      targetPort: 80
